# Rugguard-bot

./: README.md
Rugguard bot/: .env.example  README.md  analyzer.py  bot.py  config.py  health_check.py  main.py  pyproject.toml  replit.nix  requirements.txt  status_checker.py  trusted_accounts.py  x_api_client.py
Rugguard bot/scripts/: setup_database.py
